Fix for issue: spacing between dialog icon and title is not proper

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1552,6 +1552,10 @@ bs-datepicker-container, bs-daterangepicker-container {
   .app-dialog-title .wi {
     vertical-align: baseline;
   }
+
+  .app-dialog-title .dialog-heading:before {
+    content: " ";
+  }
 }
 
 /**dialog body**/
